# elasticc

./: CMakeLists.txt
elasticc/: CMakeLists.txt  elasticc.cpp  elasticc.h
libcurl-vc10-x86-release/lib/: libcurl_a.lib
libcurl-x64-release/lib/: libcurl_a.lib
